--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = "==3.11.9"
 dependencies = [
+    "faiss-cpu==1.8.0.post1",
     "future==1.0.0",
     "graspologic==3.3.0",
     "ipykernel==6.29.5",
     "jupyter==1.1.1",
     "jupyterlab==4.4.3",
+    "langchain>=0.3.26",
+    "langchain-text-splitters>=0.3.8",
     "llama-index==0.12.45",
     "llama-index-embeddings-ollama==0.6.0",
     "llama-index-graph-stores-neo4j==0.4.6",
@@ -18,7 +21,7 @@ dependencies = [
     "neo4j==5.28.1",
     "numpy==1.24.4",
     "ollama==0.5.1",
-    "pandas>=2.3.0",
+    "pandas==2.3.0",
     "pyyaml==6.0.2",
     "scipy==1.12.0",
 ]
