--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
     "numpy==1.24.4",
     "ollama==0.5.1",
     "pandas>=2.3.0",
+    "plotly>=6.2.0",
     "pyyaml==6.0.2",
     "scipy==1.12.0",
+    "wordcloud>=1.9.4",
 ]
